--- a/data/hoverboard.config.json
+++ b/data/hoverboard.config.json
@@ -35,7 +35,7 @@
   "hashtag": "dfua",
   "disqusShortName": "hoverboard-gdg-x",
   "tweetsSource": "/data/tweets.json",
-  "partnershipProposition": "http://bit.ly/df16-sponsor",
+  "partnershipProposition": "http://bit.ly/dossierPatrocinio",
   "videosSessionsUrl": "https://www.youtube.com/playlist?list=PLt8lEzcLNl31AX3-ONkkWmDOZezu9Cmnv",
   "enableSessionsRating": false,
   "navigation": [
