--- a/data/hoverboard.config.json
+++ b/data/hoverboard.config.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://agmcostabrava.esn-spain.org/",
+  "url": "https://agmcostabrava.org/",
   "startDate": "2016-09-09T09:00:00+03:00",
   "endDate": "2016-09-10T19:00:00+03:00",
   "analytics": {
